Updated website_assignment - ASSIGNMENT.html

--- a/website_assignment - ASSIGNMENT.html
+++ b/website_assignment - ASSIGNMENT.html
@@ -1,79 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Website_assignment</title>
+<title> Technolearn Website </title>
 </head>
 <body>
-
-	<table border = "1px" cellpadding = "9px" cellspacing = "1px">
-	
-	
-	<tr>
-	<td colspan ="2" bgcolor = "lightpink" width="1280px"> 
-	<h2> TechnoLearn Institude :</h2>
-	<p>"Bringing innovation and technology to reality and shaping your future with our hi-tech courses designed just for you!!"</p>
-	</td>
-	</tr>
-	
-	<tr>
-	<td colspan ="2" bgcolor = "yellow" align = "center"> 
-	<a href = "https://www.technolearn.in/" target = " "> Home|</a>
-	<a href = "https://www.technolearn.in/about-us.html" target = " "> About Us|</a>
-	<a href = "https://www.technolearn.in/faq.html" target = " "> FAQ|</a>
-	<a href = "https://www.technolearn.in/contact-us.html" target = " "> Contact Us </a>
-	</td>
-	</tr>
-	
-	<th>
-	<big><h1 a> Welcome To Our Website</h1></big><br>
-	<hr>
-	<marquee bgcolor = "orange"> Admission Open </marquee><br>
-	<p align = "left">orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only <mark>five centuries, but also the leap into</mark> electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-	
-	<br>
-	<h2>Our Products</h2><br>
-	
-	<p align = "left">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-	
-	<br>
-	
-	<u><address align = "right">Pravati paytha<br> dandelkar pul<br> Pune - 411042</address></u>
-	
-	
-	</th>
-	
-	<th bgcolor = "lightgreen">
-	<p> TechnoLearn Website</p><br>
-	<br>
-	<iframe src = "https://www.wikipedia.org/" title = "try" height = "400px" width = "400px">
-	
-	<br><br>
-	
-	
-	<ol>
-	<li> HTML</li>
-	<li> CSS</li>
-	<li> JS</li>
-	</ol>
-	<br>
-	
-	<p>***Thank You For Visiting***</p>
-	</th>
-	
-	
-	<tr>
-	<td bgcolor = "yellow">
+<table border = "2px"   cellpadding = "10px" cellspacing = "10px" align = "centerleft">
+<tr>
+<td colspan = "6" bgcolor="pink"><h1> Technolearn Training: </h1><br><q>Bringing Innovation and technology to reality and shaping youe future with our hi-tech courses designed just for you !!</q></td>
+</tr>
+<tr>
+<td bgcolor = "yellow" colspan = "6" align = "center"><a href= "" target ""> Home |</a>
+ <a href= "" target "">About us </a>
+ <a href= "" target "">Gallery | </a>
+<a href= "" target ""> FAQ |</a>
+ <a href= "" target "">Contact Us |</a></td>
+ </td>
+ <tr> 
+ <td align = "center" colspan = "4" ><h1> Welcome To our Website </h1><br><br><hr>
+ <marquee bgcolor = "orange">Admission are open please hurry up to enroll now !!</marquee><br><br>
+ <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing<mark> Lorem Ipsum passages, and more recently with desktop publishing </mark> software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p><br><br>
+ <h2 align = "left"> Our Product: </h2>
+ <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+ <address align = "right"> Parvati paytha <br> Dandekar Pool <br> code - 411042</address>
+ </td>
+ <td colspan = "3" bgcolor = "lightgreen">Technolearn Website <br> <iframe src = "https://www.wikipedia.org/" height = "300px" width = "500px"></iframe>
+ <ul>
+ <li>HTML</li>
+ <li>CSS</li>
+ <li>JAVA</li>
+ </ul>
+ <p>*** Thank You For Visiting Our Website***</p>
+ </td>
+ <tr bgcolor = "yellow">
+ <td colspan = "6">
+	<fieldset>
 	<legend align = "center">Registration Form</legend>
+	<form action = "HTML.html" align = "center">
+	<label>Enter Full name </label>
+	<input type = "text" name = "fname">
 	<label>Enter Mobile No </label>
-	<input type="number" name="mob" maxlength = "10">
-	</td>
+	<input type = "number" name = "mob">
+	<label>Enter Email Address` </label>
+	<input type = "email" name = "em"><br><br>
+	<label>Select Course <label>
+	<select>
+	<optgroup = "courses">
+	<option>HTML </option>
+	<option>CSS </option>
+	<option>JAVA </option>
+	</select><br><br>
+	<input type = "submit" name = "Register">
+	<input type = "reset" name = "clear">
+	</form>
+	</fieldset>
+	</tr><br><br>	
+	<tr cellpadding = "10px" cellspacing = "10px">
+	<td colspan = "6" align = "center" bgcolor = "pink"> Copyright technolearn@2021</td>
 	</tr>
-	
-	
-	
-	</table>
-
-
-
-</body>	
-</html>
+ </table>
+ 
